--- a/src/app/Core/dashboard-user/index/index.component.html
+++ b/src/app/Core/dashboard-user/index/index.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="p-d-flex justify-content-center">
-        <div class="p-ml-5 text-white text-center">آخرین بازدید : 13 شهریور 1399 ( 10:59 )</div>
+<!--        <div class="p-ml-5 text-white text-center">آخرین بازدید : 13 شهریور 1399 ( 10:59 )</div>-->
         <div class="p-mr-5">
           <p class="text-white" (click)="exitUser()"><i class="pi pi-power-off text-white pl-2" style="font-size: 1rem" ></i>خروج کاربر</p>
         </div>
