--- a/src/app/Core/dashboard-user/profile/profile.component.html
+++ b/src/app/Core/dashboard-user/profile/profile.component.html
@@ -81,6 +81,12 @@
                   </div>
                 </div>
                 <div class="p-field p-grid">
+                  <label for="phone" class="p-col-12 p-mb-2 p-md-3 p-mb-md-0 text-right">پلاک:</label>
+                  <div class="p-col-12 p-md-9">
+                    <input id="plaque" type="text" pInputText [(ngModel)]="user.plaque" formControlName="plaque">
+                  </div>
+                </div>
+                <div class="p-field p-grid">
                   <label class="p-col-12 p-mb-2 p-md-3 p-mb-md-0">آدرس  :</label>
                   <div class="p-col-12 p-md-9">
                     <textarea [rows]="5" [cols]="30" pInputTextarea [(ngModel)]="user.address" formControlName="address"></textarea>
@@ -88,49 +94,91 @@
                 </div>
               </div>
             </div>
+<!--            <p-footer>-->
+<!--              <button  pButton label="ثبت مشخصات" class="ui-button-success" icon="pi pi-check" iconPos="left" (click)="updateUser()" ></button>-->
+<!--            </p-footer>-->
+          </p-panel>
+          <p-panel styleClass="mb-3 pt-2" dir="rtl">
+            <p-header>
+              <p class="text-right titlePanel">شماره کارت بانکی </p>
+              <p class="subTitlePanel text-right">لطفاً مشخصات بانکی خود را جهت تسهیل در برگشت هزینه، ثبت نمایید .</p>
+            </p-header>
+            <div class="p-fluid">
+              <div class="p-md-8">
+
+
+                <div class="p-field p-grid">
+                  <label for="phone" class="p-col-12 p-mb-2 p-md-3 p-mb-md-0 text-right">شماره حساب:</label>
+                  <div class="p-col-12 p-md-9">
+                    <input id="phone" type="text" pInputText [(ngModel)]="user.accountNumber" formControlName="accountNumber">
+                  </div>
+                </div>
+                <div class="p-field p-grid">
+                  <label for="phone" class="p-col-12 p-mb-2 p-md-3 p-mb-md-0 text-right">شماره کارت:</label>
+                  <div class="p-col-12 p-md-9">
+                    <input id="plaque" type="text" pInputText [(ngModel)]="user.cardNumber" formControlName="cardNumber">
+                  </div>
+                </div>
+
+              </div>
+            </div>
             <p-footer>
-              <button  pButton label="ثبت مشخصات" class="ui-button-success" icon="pi pi-check" iconPos="left"  ></button>
+              <button  pButton label="ثبت مشخصات" class="ui-button-success" icon="pi pi-check" iconPos="left" (click)="updateUser()" ></button>
             </p-footer>
           </p-panel>
-
-
-
 
         </form>
 
       </p-tabPanel>
-<!--      <p-tabPanel>-->
-<!--        <ng-template pTemplate="header"> <i class="pi pi-unlock p-pl-3 text-white" style="font-size: 1rem"></i>تغییر رمز</ng-template>-->
-<!--        <p-panel styleClass="mb-3 pt-2" dir="rtl">-->
-<!--          <p-header>-->
-<!--            <p class="text-right titlePanel">تغییر رمز عبور</p>-->
-<!--            <p class="subTitlePanel text-right">جهت تغییر کلمه عبور میتوانید با وارد نمودن اطلاعات زیر انجام دهید .</p>-->
-<!--          </p-header>-->
-<!--          <div class="p-fluid">-->
-<!--            <div class="p-md-8">-->
-<!--              <div class="p-field p-grid">-->
-<!--                <label for="password" class="p-col-12 p-mb-2 p-md-4 p-mb-md-0">کلمه عبور جدید:</label>-->
-<!--                <div class="p-col-12 p-md-8">-->
-<!--                  <input id="password" type="text" pInputText>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="p-field p-grid">-->
-<!--                <label for="rePassword" class="p-col-12 p-mb-2 p-md-4 p-mb-md-0">تکرار کلمه عبور جدید:</label>-->
-<!--                <div class="p-col-12 p-md-8">-->
-<!--                  <input id="rePassword" type="text" pInputText>-->
-<!--                </div>-->
-<!--              </div>-->
+      <p-tabPanel>
+        <ng-template pTemplate="header"> <i class="pi pi-unlock p-pl-3 text-white" style="font-size: 1rem"></i>تغییر رمز</ng-template>
+        <p-panel styleClass="mb-3 pt-2" dir="rtl">
+          <p-header>
+            <p class="text-right titlePanel">تغییر رمز عبور</p>
+            <p class="subTitlePanel text-right">جهت تغییر کلمه عبور میتوانید با وارد نمودن اطلاعات زیر انجام دهید .</p>
+          </p-header>
+          <div class="p-fluid">
+            <div class="p-md-8">
+              <div class="p-field p-grid">
+                <label for="password" class="p-col-12 p-mb-2 p-md-4 p-mb-md-0">کلمه عبور جدید:</label>
+                <div class="p-col-12 p-md-8">
+                  <input id="password" type="text" pInputText [(ngModel)]="changePassword.password">
+                </div>
+              </div>
+              <div class="p-field p-grid">
+                <label for="rePassword" class="p-col-12 p-mb-2 p-md-4 p-mb-md-0" >تکرار کلمه عبور جدید:</label>
+                <div class="p-col-12 p-md-8">
+                  <input id="rePassword" type="text" pInputText [(ngModel)]="changePassword.rPass">
+                </div>
+              </div>
 
-<!--            </div>-->
-<!--          </div>-->
-<!--          <p-footer>-->
-<!--            <button  pButton label="تغییر رمز عبور " class="ui-button-success" icon="pi pi-check" iconPos="left"  ></button>-->
-<!--          </p-footer>-->
-<!--        </p-panel>-->
+            </div>
+          </div>
+          <p-footer>
+            <button  pButton label="تغییر رمز عبور " class="ui-button-success" icon="pi pi-check" iconPos="left"  (click)="changePasswordUser()"></button>
+          </p-footer>
+        </p-panel>
 
-<!--      </p-tabPanel>-->
+      </p-tabPanel>
 
     </p-tabView>
 
+<p-dialog [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+  <p-header>
+    <p class="mr-3">انجام شد</p>
+  </p-header>
+  <hr style="width: 100%;"/>
+  <p class="text-right text-success mt-2">مشخصات با موفقیت ویرایش شد</p>
 
+  <hr style="margin-bottom: -15px"/>
+  <ng-template pTemplate="footer">
+    <button pButton pRipple type="button" (click)="displayBasic=false" label="ادامه"
+            class="p-button-danger float-left"></button>
+  </ng-template>
+</p-dialog>
+
+<div class="text-center mt-5">
+  <p-progressSpinner *ngIf="spinnerSuccess" [style]="{width: '50px', height: '50px'}" strokeWidth="8" fill="#EEEEEE"
+                     animationDuration=".5s"></p-progressSpinner>
+</div>
 
