--- a/src/app/Core/dashboard-user/payment-user/payment-user.component.html
+++ b/src/app/Core/dashboard-user/payment-user/payment-user.component.html
@@ -6,25 +6,29 @@
   <ng-template pTemplate="header">
     <tr class="title-table">
       <th style="width: 30%" class="text-center">ردیف</th>
-      <th style="width: 30%" class="text-center">شماره تراکنش</th>
+      <th style="width: 40%" class="text-center">شماره تراکنش</th>
 
-      <th style="width: 70%" class="text-center">تاریخ </th>
-      <th style="width: 70%" class="text-center">زمان</th>
-      <th style="width: 70%" class="text-center">قیمت </th>
-      <th style="width: 70%" class="text-center">وضعیت تراکنش</th>
+      <th style="width: 40%" class="text-center">تاریخ </th>
+      <th style="width: 30%" class="text-center">زمان</th>
+      <th style="width: 30%" class="text-center">قیمت </th>
+      <th style="width: 30%" class="text-center">وضعیت تراکنش</th>
 
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-payment let-rowIndex="rowIndex">
     <tr>
       <td class="text-center">{{rowIndex + 1}}</td>
-      <td class="text-center">{{payment.resNumber}}</td>
+      <td class="text-center">{{payment.refID}}</td>
       <td class="text-center">{{payment.date}}</td>
       <td class="text-center">{{payment.time}}</td>
-      <td class="text-center">{{payment.price}}</td>
+      <td class="text-center">{{payment.price|number}}</td>
       <td class="text-center">{{payment.statusPayment}}</td>
 
     </tr>
   </ng-template>
 
 </p-table>
+<div class="text-center mt-5">
+  <p-progressSpinner *ngIf="spinnerSuccess" [style]="{width: '50px', height: '50px'}" strokeWidth="8" fill="#EEEEEE"
+                     animationDuration=".5s"></p-progressSpinner>
+</div>
