--- a/src/app/Core/dashboard-user/profile/profile.component.css
+++ b/src/app/Core/dashboard-user/profile/profile.component.css
@@ -44,3 +44,22 @@ label,input{
 
 background-color:#eceff1!important;
 }
+.textDialog{
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 12px;
+  color: #EF2B2F;
+}
+:host::ng-deep.p-dialog .p-dialog-header {
+  font-size: 13px;
+  color: #777777!important;
+  padding: 0.2rem!important;
+  padding-top: 15px!important;
+}
+:host::ng-deep.p-dialog .p-dialog-footer {
+  padding: 0.5rem!important;
+
+}
+:host::ng-deep.p-dialog .p-dialog-content {
+  margin-top: -15px!important;
+}
