--- a/src/app/Core/dashboard-user/purchases/purchases.component.html
+++ b/src/app/Core/dashboard-user/purchases/purchases.component.html
@@ -1,6 +1,6 @@
 
 
-<p-table [value]="UserModels" #dt [columns]="cols" [paginator]="true" [rows]="20">
+<p-table [value]="listProducts" #dt [columns]="cols" [paginator]="true" [rows]="20">
   <ng-template pTemplate="caption">
     <div class="alert alert-warning text-center"> لیست خریدها</div>
 
@@ -27,14 +27,18 @@
   <ng-template pTemplate="body" let-basket let-rowIndex="rowIndex">
     <tr>
       <td class="text-center">{{rowIndex + 1}}</td>
-      <td class="text-center">{{basket.product[0].title}}</td>
+      <td class="text-center">{{basket['product'][0].title}}</td>
       <td class="text-center">{{basket.count}}</td>
-      <td class="text-center">{{basket.price}}</td>
+      <td class="text-center">{{basket.price|number}}</td>
       <td class="text-center">{{basket.offerPercent}}%</td>
-      <td class="text-center">{{(basket.price*basket.count)-((basket.price*basket.count)*basket.offerPercent)/100}}</td>
+      <td class="text-center">{{(basket.price*basket.count)-((basket.price*basket.count)*basket.offerPercent)/100|number}}</td>
 
     </tr>
   </ng-template>
 
 </p-table>
 
+<div class="text-center mt-5">
+  <p-progressSpinner *ngIf="spinnerSuccess" [style]="{width: '50px', height: '50px'}" strokeWidth="8" fill="#EEEEEE"
+                     animationDuration=".5s"></p-progressSpinner>
+</div>
