seller and layout/product-detail

--- a/src/app/Core/dashboard-seller/feature/add-feature-dialog/add-feature-dialog.component.css
+++ b/src/app/Core/dashboard-seller/feature/add-feature-dialog/add-feature-dialog.component.css
@@ -1,9 +1,5 @@
-:host::ng-deep .p-dialog{
-  direction: rtl!important;
-  text-align: right!important;
-}
-:host::ng-deep .p-dialog-header{
-  direction: rtl!important;
-  text-align: right!important;
+:host ::ng-deep .p-dialog.p-dynamic-dialog {
+  direction: rtl;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
