--- a/src/app/Core/dashboard-seller/feature/feature.component.html
+++ b/src/app/Core/dashboard-seller/feature/feature.component.html
@@ -37,18 +37,7 @@
           <th pSortableColumn="titleLatin">عنوان انگلیسی
             <p-sortIcon field="titleLatin"></p-sortIcon>
           </th>
-          <th>عملیات</th>
-        </tr>
-        <tr>
           <th></th>
-          <th>
-            <input pInputText type="text" (input)="dt.filter($event.target.value, 'titleFarsi', 'contains')"
-                   placeholder="عنوان فارسی" class="p-column-filter">
-          </th>
-          <th>
-            <input pInputText type="text" (input)="dt.filter($event.target.value, 'titleLatin', 'contains')"
-                   placeholder="عنوان انگلیسی" class="p-column-filter">
-          </th>
           <th></th>
         </tr>
       </ng-template>
@@ -66,10 +55,11 @@
             {{feature.titleLatin}}
           </td>
           <td>
-            <button pButton pRipple icon="pi pi-plus"
+            <button pButton pRipple label="ثبت مقدار"
                     (click)="showAddFeatureValueDialog(feature.id, feature.titleFarsi, feature.titleLatin)"
-                    class="p-button-rounded p-button-success p-ml-2 text-white"></button>
-
+                    class="p-button-success p-ml-2 text-white"></button>
+          </td>
+          <td>
             <button pButton pRipple icon="pi pi-pencil" [disabled]="feature._id !== userData.id"
                     (click)="showEditFeatureDialog(feature.id, feature.titleFarsi, feature.titleLatin)"
                     class="p-button-rounded p-button-warning p-ml-2 text-white"></button>
@@ -82,7 +72,7 @@
 
       <ng-template pTemplate="rowexpansion" let-feature>
         <tr>
-          <td colspan="4">
+          <td colspan="5">
             <div class="p-p-3">
               <p-table [value]="feature.FeaturesValue" dataKey="id">
 
@@ -119,7 +109,7 @@
       </ng-template>
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="3">هیچ رکوردی یافت نشد.</td>
+          <td colspan="5">هیچ رکوردی یافت نشد.</td>
         </tr>
       </ng-template>
     </p-table>
