--- a/src/app/Core/dashboard-seller/profile/profile.component.html
+++ b/src/app/Core/dashboard-seller/profile/profile.component.html
@@ -4,8 +4,10 @@
   <div class="col-12">
     <div class="box text-right" dir="rtl">
       <mat-horizontal-stepper [linear]="true" #stepper>
-        <mat-step label="اطلاعات فروشگاه">
+        <mat-step>
           <form [formGroup]="shopForm" (ngSubmit)="submitShopForm()">
+            <ng-template matStepLabel>اطلاعات فروشگاه</ng-template>
+
             <div class="p-fluid p-formgrid p-grid">
               <div class="p-field p-col">
                 <label for="shopName">نام فروشگاه</label>
@@ -25,11 +27,11 @@
             <div class="p-fluid p-formgrid p-grid">
               <div class="p-field p-col">
                 <label class="d-block">قصد فروش چه کالاهایی را دارید؟</label>
+
                 <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
                             [options]="categories"
-                            placeholder="-- انتخاب کنید --"
                             formControlName="category"
-                            optionLabel="title" [filter]="true">
+                            optionLabel="title" [filter]="true" [showClear]="true">
                   <ng-template pTemplate="selectedItem">
                     <div class="state-item state-item-value"
                          *ngIf="shopForm.controls['category'].value">
@@ -42,6 +44,7 @@
                     </div>
                   </ng-template>
                 </p-dropdown>
+
                 <ul class="mt-1 text-right list-inline"
                     *ngFor="let error of shopErrorMessages.category">
                   <li class="font-small text-danger font-weight-bold list-inline-item"
@@ -70,13 +73,12 @@
             </div>
             <div class="p-fluid p-formgrid p-grid">
               <div class="p-field p-col">
-<<<<<<< HEAD
                 <<<<<<< HEAD
                 <label for="birthDay">تاریخ تولد</label>
                 <input type="text" #datepickerInput
                        formControlName="birthDay" id="birthDay" pInputText/>
-                  <ng-persian-datepicker [timeEnable]="false"
-                              [input]="datepickerInput"></ng-persian-datepicker>
+<!--                  <ng-persian-datepicker [timeEnable]="false"-->
+<!--                              [input]="datepickerInput"></ng-persian-datepicker>-->
                 <ul class="mt-1 text-right list-inline" *ngFor="let error of persoanlErrorMessages.birthDay">
                   <li class="font-small text-danger font-weight-bold list-inline-item"
                       *ngIf="personalForm.get('birthDay').hasError(error.type)
@@ -112,47 +114,31 @@
                     >>>>>>> 92cb45596a78748014aae97ae554c1e5001d87b6
                     <li class="font-small text-danger font-weight-bold list-inline-item"
                         *ngIf="shopForm.get('logo').hasError(error.type)
-=======
-                <label>آپلود لوگو</label>
-                <p-fileUpload
-                  formControlName="logo"
-                  chooseLabel="انتخاب تصویر"
-                  uploadLabel="آپلود تصویر"
-                  cancelLabel="انصراف"
-                  customUpload="true"
-                  (uploadHandler)="logoUploader($event)"
-                  invalidFileSizeMessageDetail="حداکثر سایز عکس 2 مگابایت می باشد"
-                  invalidFileSizeMessageSummary="اندازه فایل بیش از حد مجاز می باشد"
-                  accept="image/jpeg,image/png " maxFileSize="2000000">
-                </p-fileUpload>
-
-                <ul class="mt-1 text-right list-inline"
-                    *ngFor="let error of shopErrorMessages.logo">
-                  <li class="font-small text-danger font-weight-bold list-inline-item"
-                      *ngIf="shopForm.get('logo').hasError(error.type)
->>>>>>> 21c6cc4a1fb8ba0c946b82eabc3f03d2cc2b79ec
                             && (shopForm.get('logo').dirty
                             || shopForm.get('logo').touched)">
                       {{ error.message }}
                     </li>
                   </ul>
+                </ul>
               </div>
             </div>
+
+
             <div class="float-left">
               <button mat-button [disabled]="shopForm.invalid" matStepperNext>ثبت</button>
             </div>
           </form>
         </mat-step>
-        <mat-step label="اطلاعات تماس">
+        <mat-step>
           <form [formGroup]="contactForm" (ngSubmit)="submitContactForm()">
+            <ng-template matStepLabel>اطلاعات تماس</ng-template>
             <div class="p-fluid p-formgrid p-grid">
               <div class="p-field p-col">
                 <label class="d-block">استان</label>
                 <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
                             [options]="states"
-                            placeholder="-- انتخاب کنید --"
                             formControlName="state"
-                            optionLabel="label" [filter]="true"
+                            optionLabel="label" [filter]="true" [showClear]="true"
                             (onChange)="stateOnChange(contactForm.controls['state'].value.value)">
                   <ng-template pTemplate="selectedItem">
                     <div class="state-item state-item-value"
@@ -179,9 +165,8 @@
                 <label class="d-block">شهر</label>
                 <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
                             [options]="cities"
-                            placeholder="-- انتخاب کنید --"
                             formControlName="city"
-                            optionLabel="label" [filter]="true">
+                            optionLabel="label" [filter]="true" [showClear]="true">
                   <ng-template pTemplate="selectedItem">
                     <div class="city-item city-item-value"
                          *ngIf="contactForm.controls['city'].value">
@@ -244,7 +229,7 @@
             <div class="p-field p-col">
               <label class="m-0 pl-3">آیا فروشنده حقوقی هستید؟</label>
               <p-checkbox (onChange)="isCompanyOnChange()"></p-checkbox>
-              <p class="pt-3">
+              <p>
                 شخص حقیقی فردی است که دارای خصوصیاتی مختص به خود مانند نام، نام خانوادگی، تاریخ تولد، کد ملی، شماره
                 شناسنامه و غیره می باشد.
               </p>
@@ -405,9 +390,7 @@
               </div>
               <div class="p-field p-col">
                 <label class="d-block">نوع شرکت</label>
-                <p-dropdown appendTo="body"
-                            placeholder="-- انتخاب کنید --"
-                            emptyFilterMessage="نتیجه ای یافت نشد"
+                <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
                             [options]="typesCompany" formControlName="typeCompany"></p-dropdown>
                 <ul class="mt-1 text-right list-inline"
                     *ngFor="let error of businessErrorMessages.typeCompany">
