--- a/src/app/Layout/product-detail/product-detail.component.html
+++ b/src/app/Layout/product-detail/product-detail.component.html
@@ -77,11 +77,14 @@
               </div>
               <div class="col-sm-12 col-md-6 align-items-center">
                 <label>ویژگی های محصول</label>
-                <ul>
-                  <li>تایید شده توسط متخصصین</li>
-                  <li>ماندگاری بالا و طولانی مدت</li>
-                  <li>ضد آب</li>
-                </ul>
+<!--                <ul>-->
+<!--                  <li>تایید شده توسط متخصصین</li>-->
+<!--                  <li>ماندگاری بالا و طولانی مدت</li>-->
+<!--                  <li>ضد آب</li>-->
+<!--                </ul>-->
+                <p style="color: #777777;text-align: justify">
+                  {{product['briefFeature']}}
+                </p>
               </div>
             </div>
             <div class="row color no-gutters">
@@ -164,7 +167,7 @@
             <div class="row justify-content-center comment">
               <div class="col-2 align-items-center">
                 <h3>کاربر به قیمت</h3>
-                <p>در تاریخ 12 مهر 1399</p>
+                <p>در تاریخ 20 آبان 1399</p>
               </div>
               <div class="col-10 align-items-center">
                 <div class="row justify-content-center">
